# FSM

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.xcode.sh  clang-format.sh
benchmarks/: CMakeLists.txt  benchFSMStateTransitions.cpp  benchFSMWithEnums.cpp  benchFSMWithStatePattern.cpp
common/: CMakeLists.txt  ConditionalStream.cpp  ConditionalStream.h  FSMExternalTransitions.h  FSMStateTransitions.h  FSMWithEnums.h  FSMWithStatePattern.h  OldFSMExternalTransitions.h  OldFSMStateTransitions.h  States.h  Turnstile.cpp  Turnstile.h
include/: FSM.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  ConditionalStream.cpp  ConditionalStream.h  Turnstile.cpp  Turnstile.h  testFSMExternalTransitions.cpp  testFSMStateTransitions.cpp  testFSMWithEnums.cpp  testFSMWithStatePattern.cpp  testFSMv1.cpp  testFSMv2.cpp  testOldFSMExternalTransitions.cpp  testOldFSMStateTransitions.cpp
